# smapr_pointers

./: .gitignore  CMakeLists.txt  Makefile
app/: CMakeLists.txt  main.cpp
cmake/: AddGitSubmodule.cmake
src/my_lib/: CMakeLists.txt  basic.cpp  basic.h
